[gd_scene load_steps=4 format=3 uid="uid://do7dpbgd6ku6n"]

[ext_resource type="Script" path="res://hud.gd" id="1_w38b1"]
[ext_resource type="PackedScene" uid="uid://l05ikx7q6r3l" path="res://dice_roll_canvas.tscn" id="2_v2x7h"]
[ext_resource type="PackedScene" uid="uid://s3872lf8ot4q" path="res://action_select.tscn" id="3_ybqnv"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_w38b1")

[node name="DiceRollCanvas" parent="." instance=ExtResource("2_v2x7h")]
visible = false
position = Vector2(1120, 377)

[node name="ActionSelect" parent="." instance=ExtResource("3_ybqnv")]
offset_left = 1480.0
offset_top = 377.0
offset_right = 528.0
offset_bottom = -71.0

[node name="ControlsScreen" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0

[connection signal="roll_finished" from="DiceRollCanvas" to="." method="_on_roll_finished"]
[connection signal="actions_chosen" from="ActionSelect" to="." method="_on_action_select_actions_chosen"]
